--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="profile" href="http://gmpg.org/xfn/11" />
     <link rel="pingback" href="https://demo.athemes.com/sp-resume/xmlrpc.php" />
 
-    <title>Nicole Tevez - Portfolio</title>
+    <title>Nicole Tevez </title>
     <meta name="robots" content="max-image-preview:large" />
     <link rel="dns-prefetch" href="https://maps.google.com/" />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com/" />
