--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="pingback" href="https://demo.athemes.com/sp-resume/xmlrpc.php" />
 
     <title>Nicole Tevez </title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="robots" content="max-image-preview:large" />
     <link rel="dns-prefetch" href="https://maps.google.com/" />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com/" />
