--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,45 @@
     <link rel="profile" href="http://gmpg.org/xfn/11" />
     <link rel="pingback" href="https://demo.athemes.com/sp-resume/xmlrpc.php" />
 
-    <title>Nicole Tevez </title>
+    <title>Nicole Tevez</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <!-- Primary Meta Tags -->
+    <title>Nicole Tevez | Desarrolladora React</title>
+    <meta name="title" content="Nicole Tevez | Desarrolladora React" />
+    <meta
+      name="description"
+      content="Soy desarrolladora React Jr y estoy incursionando en el mundo Mobile 📱️ con React Native."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Nicole Tevez | Desarrolladora React" />
+    <meta
+      property="og:description"
+      content="Soy desarrolladora React Jr y estoy incursionando en el mundo Mobile 📱️ con React Native."
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta
+      property="twitter:title"
+      content="Nicole Tevez | Desarrolladora React"
+    />
+    <meta
+      property="twitter:description"
+      content="Soy desarrolladora React Jr y estoy incursionando en el mundo Mobile 📱️ con React Native."
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
     <meta name="robots" content="max-image-preview:large" />
     <link rel="dns-prefetch" href="https://maps.google.com/" />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com/" />
@@ -313,7 +350,7 @@
     </div>
 
     <div id="root"></div>
-    
+
     <a
       on="tap:toptarget.scrollTo(duration=200)"
       class="go-top visibility-all position-right"
