--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <!-- Primary Meta Tags -->
-    <title>Nicole Tevez | Desarrolladora React</title>
-    <meta name="title" content="Nicole Tevez | Desarrolladora React" />
+    <title>Nicole Tevez | Desarrolladora React Js</title>
+    <meta name="title" content="Nicole Tevez | Desarrolladora React Js" />
     <meta
       name="description"
       content="Soy desarrolladora React Jr y estoy incursionando en el mundo Mobile 📱️ con React Native."
@@ -22,7 +22,10 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://metatags.io/" />
-    <meta property="og:title" content="Nicole Tevez | Desarrolladora React" />
+    <meta
+      property="og:title"
+      content="Nicole Tevez | Desarrolladora React Js"
+    />
     <meta
       property="og:description"
       content="Soy desarrolladora React Jr y estoy incursionando en el mundo Mobile 📱️ con React Native."
@@ -37,7 +40,7 @@
     <meta property="twitter:url" content="https://metatags.io/" />
     <meta
       property="twitter:title"
-      content="Nicole Tevez | Desarrolladora React"
+      content="Nicole Tevez | Desarrolladora React Js"
     />
     <meta
       property="twitter:description"
@@ -47,6 +50,7 @@
       property="twitter:image"
       content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
     />
+
     <meta name="robots" content="max-image-preview:large" />
     <link rel="dns-prefetch" href="https://maps.google.com/" />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com/" />
