modifico url de metatags

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:url" content="https://naniitevez.github.io/" />
     <meta
       property="og:title"
       content="Nicole Tevez | Desarrolladora React Js"
@@ -32,12 +32,12 @@
     />
     <meta
       property="og:image"
-      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+      content="https://naniitevez.github.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:url" content="https://naniitevez.github.io/" />
     <meta
       property="twitter:title"
       content="Nicole Tevez | Desarrolladora React Js"
@@ -48,7 +48,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+      content="https://naniitevez.github.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
     />
 
     <meta name="robots" content="max-image-preview:large" />
